--- a/src/sass/_calcInput.scss
+++ b/src/sass/_calcInput.scss
@@ -2,10 +2,10 @@
 /// GENERAL CALC
 
 .calc-container {
-  padding: 0 3.2rem;
+  padding: 3.2rem 3.2rem 6.4rem;
 
   @media only screen and (max-width: $bp-smallest) {
-    padding: 0 1.6rem;
+    padding: 1.6rem 1.6rem 2.4rem;
   }
 }
 
@@ -280,7 +280,7 @@
 
 ////////////////////////////////////////////////////
 // SPINNER AND ERRORS
-.input-button-spinner-error,
+.form-button-spinner-error,
 .summary-button-spinner-error {
   // overflow: hidden;
   height: 6rem;
