--- a/src/sass/_page.scss
+++ b/src/sass/_page.scss
@@ -1,12 +1,12 @@
 .page-container {
-  padding: 1.2rem 3.2rem 8.4rem;
+  padding: 6.4rem 3.2rem 8.4rem;
 
   @media only screen and (max-width: $bp-small) {
-    padding: 1.2rem 8rem 8.4rem;
+    padding: 3.2rem 12rem 8.4rem;
   }
 
   @media only screen and (max-width: $bp-smallest) {
-    padding: 1.2rem 3.2rem 8.4rem;
+    padding: 3.2rem 3.2rem 8.4rem;
   }
 
   text-align: center;
@@ -49,6 +49,12 @@
       }
     }
 
+    @media only screen and (max-width: $bp-small) {
+      &:not(:last-of-type) {
+        margin-bottom: 6.4rem;
+      }
+    }
+
     @media only screen and (max-width: $bp-smallest) {
       &:not(:last-of-type) {
         margin-bottom: 4.8rem;
@@ -84,8 +90,6 @@
   .page-header {
     margin-bottom: 2.4rem;
   }
-
-  margin-bottom: 16rem;
 
   .links-container {
     margin-top: 1.2rem;
